--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,7 +22,7 @@ env:
 jobs:
   terraform:
     name: "my terraform job"
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     defaults:
       run: 
         shell: bash
